name:                hmcalc
version:             0.1.0.0
synopsis:            hmcalc is a simple calculator for matrices
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Kilian Kilger
maintainer:          kkilger@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

Data-Files:          LICENSE

Source-repository head
  Type:              git
  Location:          https://github.com/kkilger/hmcalc.git

Library
  Hs-Source-Dirs:    src
  Ghc-options:       -Wall
  Build-depends:     base >= 4.6 && < 5, 
                     mtl >=2.1 && <3 
  Exposed-modules:   Hmcalc.Lexer
  default-language:  Haskell2010

executable hmcalc
  main-is:           Main.hs
  build-depends:     base >=4.6 && <5, 
                     hmcalc
  default-language:  Haskell2010

Test-Suite lexerTest 
  type:              exitcode-stdio-1.0
  Hs-Source-Dirs:    test
  main-is:           LexerTest.hs
  build-depends:     base,
                     test-framework,
                     test-framework-hunit,
                     HUnit,
                     hmcalc
  default-language:  Haskell2010 
