Name:                  hmcalc
Version:               0.1.0.0
Synopsis:              hmcalc is a simple calculator for matrices
License:               GPL-3
License-file:          LICENSE
Author:                Kilian Kilger
Maintainer:            kkilger@gmail.com
Category:              Math
Build-type:            Simple
Cabal-version:         >=1.10
Data-Files:            LICENSE

Source-repository head
  Type:                git
  Location:            https://github.com/kkilger/hmcalc.git

Library
  Hs-Source-Dirs:      src
  Ghc-options:         -Wall -fwarn-tabs -Werror
  Build-depends:       base >= 4.6 && < 5, 
                       mtl >=2.1 && <3 
  Exposed-modules:     Hmcalc.Lexer
  Default-Extensions:  Safe
  Default-Language:    Haskell2010


Executable hmcalc
  Main-is:             Main.hs
  Ghc-options:         -Wall -fwarn-tabs -Werror
  Build-depends:       base >=4.6 && <5, 
                       hmcalc
  Default-language:    Haskell2010
  Default-Extensions:  Safe

Test-Suite lexerTest 
  Type:                exitcode-stdio-1.0
  Hs-Source-Dirs:      test
  Main-is:             LexerTest.hs
  Build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       hmcalc
  Default-language:    Haskell2010
